--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,18 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    implementation group: 'io.rest-assured', name: 'rest-assured', version: '3.3.0'
+    implementation group: 'org.json', name: 'json', version: '20200518'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.9.0'
+    implementation group: 'org.projectlombok', name: 'lombok', version: '1.18.12'
+    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.12'
+    implementation group: 'org.testng', name: 'testng', version: '7.3.0'
+    testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.12'
+    implementation group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.1.1'
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
+    implementation 'io.rest-assured:json-schema-validator:5.3.0'
 }
 
 test {
-    useJUnitPlatform()
+    useTestNG()
 }
